--- a/app/elements/transportfee-service/transportfee-service.html
+++ b/app/elements/transportfee-service/transportfee-service.html
@@ -1064,6 +1064,7 @@
         paymentarr=[];
         document.querySelector('transportfee-card').FnRefresh1();
         document.querySelector('zonetostudent-card').FnRefresh();
+        // document.querySelector('transportfee-installment-card').FnRefresh();
         document.querySelector('transportfee-installment-card').FnRefresh();
       },
       fetchstudentforreceiptsearchService:function(){
