--- a/app/elements/zonechange-card/zonechange-card.html
+++ b/app/elements/zonechange-card/zonechange-card.html
@@ -1,5 +1,6 @@
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
+<link rel="import" href="..\datepicker-card\datepicker-card.html">
 
 <dom-module id="zonechange-card">
   <template>
@@ -23,9 +24,9 @@
     <div>
     <div class="row enquiry-form">      
      <div class="list-group col-sm-12 panel-body form-category">
-      <div class="col-md-3" style="margin-top: 2%;">
+      <div class="col-md-3">
           <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchStudent"></paper-input>
-          <paper-listbox class="dropdown-content" id="schoolfeeinput" on-iron-select="FnSelectStudent">
+          <paper-listbox class="dropdown-content" id="zonechangeinput" on-iron-select="FnSelectStudent">
           <template is="dom-repeat" items="{{itemArray}}" as="item">
             <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
           </template>
@@ -49,7 +50,7 @@
       <div class="col-sm-3 enquiry-input">
           <paper-input label="Previous Zone Fee" value="{{previouszonefee}}"></paper-input>
       </div>
-      <div class="col-sm-3 enquiry-input">
+      <div class="col-sm-3 enquiry-input" style="margin-top: -1%;width: 35%;">
           <datepicker-card></datepicker-card>
       </div>
      </div>
@@ -75,7 +76,93 @@
 
     Polymer({
       is: 'zonechange-card',
+      ready:function(){
+        this.$.zonechangeinput.style.visibility='hidden';
+      },
+      callService:function(){
+        this.$.service.fetchallstudentforzoneService();
+      },
+      autocompletearr:function(autocompletearr)
+      {
+         item=autocompletearr;
+      },
+      FnSearchStudent:function(e){
+      this.FnRefresh1();  
+      if(e.keyCode==13|| e.keyCode==40)
+      this.querySelector('#zonechangeinput').focus();
+      var arr=[];
+      arr.push({"itemdes":"-----Select-----"});
+      this.querySelector('#zonechangeinput').style.visibility='visible';
+      if(e.keyCode==8){
+        this.itemflag="true";
+        this.itemval="";
+        var len=(this.value).length;
+        if(len<=1){
+          this.querySelector('#zonechangeinput').style.visibility='hidden';
+          this.itemArray="";
+          this.itemval="";
+        }
+        if(len>1){
+          this.querySelector('#zonechangeinput').style.visibility='visible';
+          var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          this.itemArray=arr;
+        }
+      }
+      if(e.keyCode!=8&& e.keyCode!=16&& e.keyCode!=13 && e.keyCode!=38&&e.keyCode!=40&&e.keyCode!=37&&e.keyCode!=39){
+        if(this.itemflag=="true") {
+          this.itemval = (this.value).toUpperCase()+String.fromCharCode((e.keyCode)).toUpperCase();
+          this.itemflag="false";
+        }
+        else
+        this.itemval = this.value +String.fromCharCode((e.keyCode));
+        if(this.itemval.length>0)
+        {
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,this.itemval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.itemval).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          if(arr.length>0)
+            this.itemArray=arr;
+          else
+          {
+            var obj={"itemdes":"","enquiry_no":""};
+            obj.itemdes="No items found";
+            arr.push(obj);
+            this.itemArray=arr;
+          }
+        }
+      }
+    },
+    FnSelectStudent:function(e){
 
+    this.querySelector('#zonechangeinput').style.visibility='hidden';
+    var studentname = e.target.selectedItem.textContent.trim();
+    var studentid = e.target.selectedItem.value.trim();
+    localStorage.setItem("curr_sess_studentid",studentid);
+    localStorage.setItem("curr_sess_studentname",studentname);
+    this.itemArray=[];
+    document.querySelector('#zonechangeinput').selected=-1;
+    this.value=studentname;
+    this.$.service.fetchStudentInfoForZoneAllocation(studentid);
+    },
     });
   })();
   </script>
