reports pdc and coll report with filter

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -355,7 +355,12 @@
             <div class="col-md-12">
               <transport-cheque-bouncecancel></transport-cheque-bouncecancel>
             </div>
-          </section> 
+          </section>
+          <section data-category="transport-pdc-report">
+            <div class="col-md-12">
+              <transport-pdc-report></transport-pdc-report>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
