--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -311,3 +311,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-cheque-bouncecancel-itemcard/transport-cheque-bouncecancel-itemcard.html">
 <link rel="import" href="zone-cancellation-card/zone-cancellation-card.html">
 <link rel="import" href="transport-processing-service/transport-processing-service.html">
+<link rel="import" href="transport-pdc-report/transport-pdc-report.html">
