--- a/app/elements/transport-pdc-report/transport-pdc-report.html
+++ b/app/elements/transport-pdc-report/transport-pdc-report.html
@@ -1,7 +1,7 @@
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
 
-<dom-module id="transportdaily-collection-report">
+<dom-module id="transport-pdc-report">
   <template>
     <style>
       .datecard {
@@ -18,15 +18,14 @@
                 </div>
                 <div class="col-md-2" style="margin-top: 2%;margin-left: -3%;">
                   <todate-icon-pickercard></todate-icon-pickercard>
-                </div>
-            
-                <div class="col-sm-2" style="margin-left: 5%;">
-                <paper-dropdown-menu label="Select Installment Type" attr-for-selected="value">
-                  <paper-menu id="transportdaycollectiontype" class="dropdown-content" required on-iron-select="FnSelectType" valueattr="value" >
+                </div>              
+                <div class="col-sm-2" style="margin-left: 5%;" hidden>
+                <paper-dropdown-menu label="Select Type" attr-for-selected="value">
+                  <paper-menu id="transportpdccollectiontype" class="dropdown-content" required on-iron-select="FnSelectType" valueattr="value" >
                     <!-- <template  is="dom-repeat" items="{{}}" as="item"> -->
-                    <paper-item value="All">All</paper-item>
-                    <paper-item value="Installment1">Installment1</paper-item>
-                    <paper-item value="Installment2">Installment2</paper-item>         
+                    <paper-item value="all">All</paper-item>
+                    <paper-item value="new">New</paper-item>
+                    <paper-item value="promoted">Promoted</paper-item>
                     <!-- </template> -->
                   </paper-menu>
                 </paper-dropdown-menu> 
@@ -37,7 +36,7 @@
                 <div class="col-md-1" style="margin-top: 2%;margin-left: 10%;">
                 <p>Download
                 <a href="#">
-                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('transportdaycollectionreport', 'Transport Daily Collection')"></span>
+                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('transportpdccollectionreport', 'Transport PDC Collection')"></span>
                 </a>
                 </p>
                 </div>                 
@@ -46,7 +45,7 @@
           </div>
         </div>
     </div>
-    <div id="transportdaycollectionreport">
+    <div id="transportpdccollectionreport">
      <table class="table table-hover">
       <thead>
       <tr>
@@ -55,19 +54,15 @@
       </tr>
       </thead>
       <tbody>
-      <template  is="dom-repeat" items="{{transportdaycollectionarr}}" as="item">
-        <tr><td>{{item.sno}}</td><td>{{item.studentid}}</td><td>{{item.studentname}}</td><td>{{item.grade}}</td>
-        <td>{{item.installment}}</td><td>{{item.modeofpayment}}</td><td>{{item.chequeno}}</td><td>{{item.bankname}}</td><td>{{item.chequedate}}</td><td>{{item.receiveddate}}</td>
+      <template  is="dom-repeat" items="{{transportpdccollectionarr}}" as="item">
+        <tr><td>{{item.sno}}</td><td>{{item.student_id}}</td><td>{{item.name}}</td><td>{{item.grade}}</td>
+        <td>{{item.installtype}}</td><td>Cheque</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.paid_date}}</td>
         <td>{{item.receiptno}}</td><td>{{item.amount}}</td></tr>
       </template>
       <tr></tr>
       </tbody>
     </table>  
-    <table>
-      <tr><th colspan="8" style="text-align: right;">Total amount from CASH: &nbsp;&nbsp;</th><th>{{cashtotal}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from CHEQUE: &nbsp;&nbsp;</th><th>{{chequetotal}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from NEFT/RTGS: &nbsp;&nbsp;</th><th>{{transfertotal}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from CARD SWIPE: &nbsp;&nbsp;</th><th>{{swipetotal}}</th></tr>
+    <table>      
       <tr><th colspan="8" style="text-align: right;">Grand Total: &nbsp;&nbsp;</th><th>{{total}}</th></tr>
     </table>  
     </div>
@@ -92,7 +87,7 @@
     // var grade="All Grades";
     var type="All";
     Polymer({
-      is: 'transportdaily-collection-report',
+      is: 'transport-pdc-report',
       ready:function(){
         this.hidetotal=true;
       },
@@ -100,16 +95,16 @@
         this.hidetotal=false;
       },
       FnCallService:function(){        
-        this.$.feereportservice.FnFetchDayCollectionService(type);
+        this.$.feereportservice.FnFetchPDCCollectionService();
       },
       FnView:function(){
-        this.$.feereportservice.FnFetchDayCollectionService(type);
+        this.$.feereportservice.FnFetchPDCCollectionService();
       },
-      FnSelectGrade:function(e){
-        grade=(e.target.selectedItem.textContent).trim();
-        if(this.flag==1)
-         this.$.feereportservice.FnFetchDayCollectionService(); 
-      },
+      // FnSelectGrade:function(e){
+      //   grade=(e.target.selectedItem.textContent).trim();
+      //   if(this.flag==1)
+      //    this.$.feereportservice.FnFetchPDCCollectionService(); 
+      // },
       FnRefresh:function(){
         // document.querySelector('#transportdaycollectiongrade').selected=-1;
         // document.querySelector('#reportfiltertype').selected=-1;
@@ -117,13 +112,13 @@
         document.querySelector('fromdate-icon-pickercard').ready();
         // document.querySelector('todate-icon-pickercard').ready();
         this.hidetotal=true;
-        document.querySelector('#transportdaycollectiontype').selected=-1;
-        type="All";
+        document.querySelector('#transportpdccollectiontype').selected=-1;
+        type="";
       },
       FnSelectType:function(e){
         this.flag=1;
         type=(e.target.selectedItem.textContent).trim();
-        this.$.feereportservice.FnFetchDayCollectionService(type);
+        this.$.feereportservice.FnFetchPDCCollectionService();
       }
     });
   })();
