--- a/app/elements/transport-processing-service/transport-processing-service.html
+++ b/app/elements/transport-processing-service/transport-processing-service.html
@@ -69,7 +69,9 @@
         var temparr=[];
         var t=1;
         for(var i=0;i<arr.length;i++){          
-          if(arr[i].installtype="Installment1"&&arr[i].installment_1!=""&&arr[i].installment_1>0&&arr[i].install1_status!='cancel'&&arr[i].install1_status!='bounce'){
+          // alert(arr[i].installtype);
+          if(arr[i].installtype=="Installment1"&&arr[i].installment_1!=""&&arr[i].installment_1>0&&arr[i].install1_status!='cancel'&&arr[i].install1_status!='bounce'){
+            // alert('one');
             var obj={};
             obj.sno=t;
             obj.student_id=arr[i].student_id;
@@ -82,7 +84,8 @@
             temparr.push(obj);
             t=t+1;
           }
-          if(arr[i].installtype="Installment2"&&arr[i].installment_2!=""&&arr[i].installment_2>0&&arr[i].install2_status!='cancel'&&arr[i].install2_status!='bounce'){
+          if(arr[i].installtype=="Installment2"&&arr[i].installment_2!=""&&arr[i].installment_2>0&&arr[i].install2_status!='cancel'&&arr[i].install2_status!='bounce'){
+            // alert('two');
             var obj={};
             obj.sno=t;
             obj.student_id=arr[i].student_id;
